[package]
name = "zman"
edition = "2021"
version = "0.1.0"
description = "Manage Zig installations"

[dependencies]
directories = "5.0.1"
eyre = "0.6.12"
indicatif = "0.17.8"
semver = "1.0.22"
serde_json = "1.0.114"
sha2 = "0.10.8"
tar = "0.4.40"
xz2 = "0.1.7"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
console = "0.15.8"
temp-dir = "0.1.13"
fs_extra = "1.3.0"

[dependencies.clap]
version = "4.5.3"
features = ["usage", "wrap_help", "help", "error-context", "color", "std", "derive"]
default-features = false

[dependencies.reqwest]
version = "0.12.1"
features = ["json"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
