[package]
name = "zman"
edition = "2021"
version = "0.1.0"
description = "Manage Zig installations"

[dependencies]
directories = "5.0.1"
eyre = { features = ["auto-install"], default-features = false, version = "0.6.12" }
indicatif = { default-features = false, version = "0.17.8" }
semver = "1.0.22"
serde_json = { default-features = false, version = "1.0.114" }
sha2 = { default-features = false, version = "0.10.8" }
tar = { default-features = false, version = "0.4.40" }
xz2 = "0.1.7"
tokio = { version = "1.0.0", features = ["rt-multi-thread"], default-features = false }
console = { default-features = false, version = "0.15.8" }
temp-dir = "0.1.13"
fs_extra = "1.3.0"
clap = { version = "4.5.3", features = ["derive", "wrap_help"] }
reqwest = { version = "0.12.1", features = ["json", "default-tls"], default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
